--- a/about.css
+++ b/about.css
@@ -16,6 +16,7 @@ body{
     display: flex;
     justify-content: space-between;
     padding-right: 20px;
+    background-color: rgb(63, 62, 62);
 }
 
 
