--- a/album.css
+++ b/album.css
@@ -16,6 +16,7 @@ body{
     display: flex;
     justify-content: space-between;
     padding-right: 20px;
+    background-color: rgb(63, 62, 62);
 }
 
 
@@ -77,7 +78,8 @@ body{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
+    margin-bottom: 50px;
 }
 .pics{
     height: 300px;
@@ -87,7 +89,7 @@ body{
     border: 3px solid black;
     border-radius: 4px;
     text-align: center;
-    
+    padding-bottom: 20px;
 }
 .pics p{
     padding: 0px 5px;
