--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ body{
 }
 .links a:hover{
     color: white;
+    padding: 5px ;
 }
 
 .content{
@@ -46,13 +47,8 @@ body{
 .content p{
     padding: 5px;
 }
-#press{
-    background-color: white;
-}
-#press a{
-    color: black;
-    text-decoration: none;
-}
+
+
 .socials{
     display: flex;
     flex-direction: column;
@@ -63,4 +59,15 @@ body{
 }
 .socials a{
     padding: 10px;
+}
+button a{
+    text-decoration: none;
+    color: black;
+}
+
+button:hover{
+    
+    background-color: rgb(63, 62, 62);
+    color: white;
+    padding: 5px;
 }
