--- a/index.css
+++ b/index.css
@@ -1,13 +1,17 @@
+*{
+    padding: 0;
+    font-family: 'poppins';
+}
 body{
     background-image: url(images/Grey\ Sunset.png);
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: 'poppins';
+    width: 100%;
+    min-width: 50px;
 }
 .head{
     
-    margin: 0;
-    padding: 0;
+
     display: flex;
     justify-content: space-between;
 }
@@ -38,11 +42,12 @@ body{
 }
 
 .content{
+    min-width: 100px;
     width: 300px;
     height: 200px;
     background-color: rgb(155, 152, 152);
     border-radius: 10px;
-    margin-left: 500px;
+    margin-left: 40%;
     opacity: .8;
 }
 .content p{
