--- a/index.css
+++ b/index.css
@@ -1,13 +1,14 @@
 *{
     padding: 0;
     font-family: 'poppins';
+
+    
 }
 body{
     background-image: url(images/Grey\ Sunset.png);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    min-width: 50px;
 }
 .head{
     
@@ -42,7 +43,6 @@ body{
 }
 
 .content{
-    min-width: 100px;
     width: 300px;
     height: 200px;
     background-color: rgb(155, 152, 152);
@@ -76,4 +76,11 @@ button:hover{
     background-color: rgb(63, 62, 62);
     color: white;
     padding: 5px;
+}
+
+@media only screen and(min-width:200px){
+    ul{
+        display: block;
+
+    }
 }
