--- a/index.css
+++ b/index.css
@@ -78,9 +78,12 @@ button:hover{
     padding: 5px;
 }
 
-@media only screen and(min-width:200px){
-    ul{
+@media only screen and(max-width:700px){
+    .links{
         display: block;
 
+    }
+    body{
+      background-color: grey;
     }
 }
