add a media query

--- a/album.css
+++ b/album.css
@@ -79,8 +79,7 @@ body{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding-bottom: 40px;
-    margin-bottom: 50px;
+    padding: 30px 5px;
 }
 .pics{
     height: 300px;
@@ -102,9 +101,8 @@ body{
     opacity: .8;
     overflow: scroll;
     overflow-x: hidden;
-    margin: 0 200PX;
-    
-    padding: 5px;
+    margin: 0 200px;
+    padding: 10px;
 }
 ::-webkit-scrollbar {
     width: 10px;
@@ -120,3 +118,48 @@ button:hover{
     background-color: rgb(63, 62, 62);
     padding: 5px;
 }
+
+
+
+@media screen and (max-width: 700px) {
+    body{
+        background-image: url(images/Grey\ Sunset.png);
+        background-size: cover;
+        width: 100%;
+        font-family: 'poppins';
+        
+    }
+    .links{
+        padding: 0;
+        display: block;
+        margin-right: 20px;
+        text-align: center;
+    }
+    .links li{
+        background-color: rgb(155, 152, 152);
+        padding: 0;
+    }
+    .links a{
+        border: none;
+        padding: 10px 20px;
+        margin: 1px 0;
+        display: block;
+        font-size: 20px;
+    }
+    .links a:hover{
+        color: white;
+        background-color: rgb(63, 62, 62);
+        cursor: pointer;
+    }
+    .content{
+        margin: 10px;
+
+    }
+    .last{
+        display: inline;
+    }
+    .last-4{
+        position: absolute;
+        margin: 30%;
+    }
+  }
