--- a/about.css
+++ b/about.css
@@ -39,7 +39,7 @@ body{
     padding: 5px ;
 }
 .main{
-    width: 500px;
+    width: 35%;
     text-align: center;
     margin: 0 35%;
     background-color: white;
@@ -84,3 +84,48 @@ h3{
 .socials a{
     padding: 10px;
 }
+
+
+
+@media screen and (max-width: 700px) {
+    body{
+        background-image: url(images/Grey\ Sunset.png);
+        background-size: cover;
+        width: 100%;
+        font-family: 'poppins';
+        
+    }
+    .links{
+        padding: 0;
+        display: block;
+        margin-right: 20px;
+        text-align: center;
+    }
+    .links li{
+        background-color: rgb(155, 152, 152);
+        padding: 0;
+    }
+    .links a{
+        border: none;
+        padding: 10px 20px;
+        margin: 1px 0;
+        display: block;
+        font-size: 20px;
+    }
+    .links a:hover{
+        color: white;
+        background-color: rgb(63, 62, 62);
+        cursor: pointer;
+    }
+    .main{
+        width: 300px;
+        margin:0px 70px;
+    }
+    .last{
+        display: inline;
+    }
+    .last-4{
+        position: absolute;
+        margin: 30%;
+    }
+  }
