--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ body{
 }
 .links a:hover{
     color: white;
-    padding: 5px ;
+    
 }
 
 .content{
@@ -79,7 +79,10 @@ button:hover{
 }
 .last-4{
     
-    text-align: center;
+    position: absolute;
+    bottom: 0;
+    color: white;
+    margin-left: 40%;
     
 }
 
@@ -96,9 +99,11 @@ button:hover{
         display: flex;
         justify-content: space-between;
         background-color: unset;
+        
     }
     .links li{
         padding: 0;
+        border-right: 2px solid black;
     }
     .links a{
         border: none;
@@ -113,7 +118,8 @@ button:hover{
     }
     .last-4{
         position: absolute;
-        margin: 30%;
+        bottom: 0;
+        margin-left: 30%;
         color: white;
     }
   }
