--- a/album.css
+++ b/album.css
@@ -34,7 +34,7 @@ body{
 }
 .links a:hover{
     color: white;
-    padding: 5px ;
+    
 }
 
 
@@ -51,6 +51,7 @@ body{
 }
 .last-2 a{
     text-decoration: none;
+    color: blueviolet;
 }
 .last-2 li{
     color: blueviolet;
@@ -118,6 +119,12 @@ button:hover{
     background-color: rgb(63, 62, 62);
     padding: 5px;
 }
+.reg-links ul{
+    color: blueviolet;
+}
+.reg-links a{
+    text-decoration: none;
+}
 
 
 
@@ -137,6 +144,7 @@ button:hover{
     }
     .links li{
         padding: 0;
+        border-right: 2px solid black;
     }
     .links a{
         border: none;
