--- a/album.css
+++ b/album.css
@@ -161,6 +161,8 @@ button:hover{
     }
     .links a:hover{
         color: white;
+        font-size: 20px;
+        
     }
     .content{
         margin: 10px;
