--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     font-family: 'poppins';
-
+    
     
 }
 body{
@@ -9,6 +9,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    
 }
 .head{
     
@@ -59,12 +60,12 @@ body{
     display: flex;
     flex-direction: column;
     float: right;
-    padding: 15px;
+    padding: 0 15px;
     padding-top: 90px;
     
 }
 .socials a{
-    padding: 10px;
+    padding:10px;
 }
 button a{
     text-decoration: none;
@@ -82,6 +83,10 @@ button:hover{
     position: absolute;
     bottom: 0;
     color: white;
+    
+    position: absolute;
+    bottom: 0;
+    color: wheat;
     margin-left: 40%;
     
 }
@@ -112,13 +117,13 @@ button:hover{
     }
     .links a:hover{
         color: white;
+        font-size: 20px;
     }
     .content{
-        margin-left: 40px;
+        margin-left: 20%;
     }
     .last-4{
         position: absolute;
-        bottom: 0;
         margin-left: 30%;
         color: white;
     }
